yaml/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: geekbang
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
      role: backend
  template:
    metadata:
      labels:
        app: httpserver
        role: backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                    - httpserver
              topologyKey: kubernetes.io/hostname
      containers:
      - name: httpserver
        image: docker.io/leventtsang/http-server:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: httpserver-port
            containerPort: 9090
            protocol: TCP
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: httpserver-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          terminationGracePeriodSeconds: 60
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: httpserver-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: "2"
            memory: 2Gi
          limits:
            cpu: 100m
            memory: 100Mi
      nodeSelector:
        kubernetes.io/os: linux
