yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  labels:
    app: httpserver
    config: httpserver
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: httpserver
